Atualiza o template de acordo com as aplicações